// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchScannedHostDetails: fetchScannedHostDetails 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": Object {
              "Portal-Version": Object {
                "AV2-VERSION": "0.1.0",
                "CA-VERSION": "2.23.0.0",
                "CERTVIEW-VERSION": "2.7.0.0-67",
                "CLOUDVIEW-VERSION": "1.11.0.0-1",
                "CM-VERSION": "1.30.0.0",
                "CS-VERSION": "1.6.8.2-23",
                "FIM-VERSION": "2.3.1.0",
                "IOC-VERSION": "3.0.0.0-5",
                "ITAM-VERSION": "1.2.1.1-1",
                "MDS-VERSION": "2.15.7.0",
                "PM-VERSION": "1.4.3.0-289",
                "PS-VERSION": "1.2.1.0-4",
                "PortalApplication-VERSION": "3.1.2.0-2 OFFICIAL #597 (2020-09-15T15:54:59Z)",
                "QGS-VERSION": "1.2.0.0-6",
                "QUESTIONNAIRE-VERSION": "2.23.1.0",
                "QUESTIONNAIRE__V2-VERSION": "1.10.1.0",
                "THREAT__PROTECT-VERSION": "1.2.0.0",
                "UD-VERSION": "0.0.6",
                "VM-VERSION": "1.0.3",
                "WAF-VERSION": "2.12.4.0",
                "WAS-VERSION": "6.13.1.0",
              },
              "QWeb-Version": Object {
                "SCANNER-VERSION": "12.1.67-1",
                "VULNSIGS-VERSION": "2.5.13-2",
                "WEB-VERSION": "10.3.0.3-2",
              },
            },
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": Array [
        "DAST",
      ],
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": "6.13.1.0",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": Array [
        "vulnerability-management",
      ],
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": "1.0.3",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`fetchScannedHostFindings: fetchScannedHostFindings 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": Object {
              "Portal-Version": Object {
                "AV2-VERSION": "0.1.0",
                "CA-VERSION": "2.23.0.0",
                "CERTVIEW-VERSION": "2.7.0.0-67",
                "CLOUDVIEW-VERSION": "1.11.0.0-1",
                "CM-VERSION": "1.30.0.0",
                "CS-VERSION": "1.6.8.2-23",
                "FIM-VERSION": "2.3.1.0",
                "IOC-VERSION": "3.0.0.0-5",
                "ITAM-VERSION": "1.2.1.1-1",
                "MDS-VERSION": "2.15.7.0",
                "PM-VERSION": "1.4.3.0-289",
                "PS-VERSION": "1.2.1.0-4",
                "PortalApplication-VERSION": "3.1.2.0-2 OFFICIAL #597 (2020-09-15T15:54:59Z)",
                "QGS-VERSION": "1.2.0.0-6",
                "QUESTIONNAIRE-VERSION": "2.23.1.0",
                "QUESTIONNAIRE__V2-VERSION": "1.10.1.0",
                "THREAT__PROTECT-VERSION": "1.2.0.0",
                "UD-VERSION": "0.0.6",
                "VM-VERSION": "1.0.3",
                "WAF-VERSION": "2.12.4.0",
                "WAS-VERSION": "6.13.1.0",
              },
              "QWeb-Version": Object {
                "SCANNER-VERSION": "12.1.67-1",
                "VULNSIGS-VERSION": "2.5.13-2",
                "WEB-VERSION": "10.3.0.3-2",
              },
            },
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": Array [
        "DAST",
      ],
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": "6.13.1.0",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": Array [
        "vulnerability-management",
      ],
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": "1.0.3",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`fetchScannedWebAppFindings: fetchScannedWebAppFindings 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": undefined,
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": Array [
        "DAST",
      ],
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": undefined,
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": Array [
        "vulnerability-management",
      ],
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": undefined,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`fetchScannedWebApps: fetchScannedWebApps 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": undefined,
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": Array [
        "DAST",
      ],
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": undefined,
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": Array [
        "vulnerability-management",
      ],
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": undefined,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;
